--- a/app/assets/javascripts/selections.js.erb
+++ b/app/assets/javascripts/selections.js.erb
@@ -3,37 +3,42 @@ function listenOnSelections(){
   chooseTip();
   chooseCartoon();
   chooseProfile();
-  $("#html5colorpicker").on("change", pickColor);
+  toggleCanvasImage();
 
   function chooseColor(){
-    <% Drawing::COLORS.each do |color| %>
-      $("#<%= color %>").on("click", <%= color %>);
-     
-      function <%= color %>(){
-        var currentColorLetters = context.strokeStyle.split(
-          '');
-        currentColorLetters.shift();
-        var currentColorClass = "." + currentColorLetters.join("");
-        $(currentColorClass).attr("style", "background-color: colorName; border-radius:50%; height:50px; width:50px;".replace("colorName", $(currentColorClass).attr("id")
-          ));
+    $("#html5colorpicker").on("change", fromColorPicker);
+    fromButtons();
+
+    function fromButtons(){
+      <% Drawing::COLORS.each do |color| %>
+        $("#<%= color %>").on("click", <%= color %>);
        
-        context.globalCompositeOperation = "source-over";
-        context.strokeStyle = "<%= color %>";
-        $(this).attr("style", "background-color:<%= color %>;border-radius:50%;height:50px;width:50px;box-shadow: inset 0 0 0 3px #27496d;");
+        function <%= color %>(){
+          var currentColorLetters = context.strokeStyle.split(
+            '');
+          currentColorLetters.shift();
+          var currentColorClass = "." + currentColorLetters.join("");
+          $(currentColorClass).attr("style", "background-color: colorName; border-radius:50%; height:50px; width:50px;".replace("colorName", $(currentColorClass).attr("id")
+            ));
+         
+          context.globalCompositeOperation = "source-over";
+          context.strokeStyle = "<%= color %>";
+          $(this).attr("style", "background-color:<%= color %>;border-radius:50%;height:50px;width:50px;box-shadow: inset 0 0 0 3px #27496d;");
 
-        var newColorLetters = context.strokeStyle.split(
-          '');
-        newColorLetters.shift();
-        var newColorClass = newColorLetters.join("");
-        $(this).addClass(newColorClass);
-      }
-    <% end %>
-  }
+          var newColorLetters = context.strokeStyle.split(
+            '');
+          newColorLetters.shift();
+          var newColorClass = newColorLetters.join("");
+          $(this).addClass(newColorClass);
+        }
+      <% end %>
+    }
 
-  function pickColor(){
-    context.globalCompositeOperation = "source-over"
-    context.strokeStyle = $(this).val();
-  }
+    function fromColorPicker(){
+      context.globalCompositeOperation = "source-over"
+      context.strokeStyle = $(this).val();
+    }
+  }  
 
   function chooseTip(){
     <% Drawing::TIPS.each do |tip| %>
@@ -63,7 +68,7 @@ function listenOnSelections(){
           imageHolderContext.globalAlpha = 0.3;
         }
         var image = this;
-        currentImage = image
+        currentImage = image;
         imageHolderContext.clearRect(0, 0, canvas.width, canvas.height);
         imageHolderContext.drawImage(image, canvas.width/25, 5, canvas.width/4, canvas.height/3.5);
         $(".modal-base").hide();
@@ -75,11 +80,27 @@ function listenOnSelections(){
     $("#coloring").on("click", function(){
       $("#profile").removeClass();
       $("#profile").addClass("coloring");
+      $("#profile-modal").hide()
     })
 
     $("#tracing").on("click", function(){
       $("#profile").removeClass();
       $("#profile").addClass("tracing");
+      $("#profile-modal").hide()
     })
+  }
+
+  function toggleCanvasImage(){
+    $(".light-switch").on("click", turnSwitch);
+
+    function turnSwitch(){
+      $(this).parents("div:first").toggleClass("switch-on");
+      $(this).toggleClass("js-off");
+      if($(this).hasClass("switch-on")){
+        imageHolderContext.drawImage(currentImage, canvas.width/25, 5, canvas.width/4, canvas.height/3.5)
+      } else {
+        imageHolderContext.clearRect(0, 0, canvas.width, canvas.height);
+      }
+    }
   }
 }
