--- a/app/assets/javascripts/drawings.js.erb
+++ b/app/assets/javascripts/drawings.js.erb
@@ -46,8 +46,9 @@ function draw(e){
     context.lineJoin = "round";
     context.lineCap = "round";
 
-    context.moveTo(mouseCoordinates[mouseCoordinates.length-2][0], mouseCoordinates[mouseCoordinates.length-2][1])
-    context.lineTo(mouseCoordinates[mouseCoordinates.length-1][0], mouseCoordinates[mouseCoordinates.length-1][1])
+    context.moveTo(mouseCoordinates[mouseCoordinates.length-2][0], mouseCoordinates[mouseCoordinates.length-2][1]);
+    context.lineTo(mouseCoordinates[mouseCoordinates.length-1][0], mouseCoordinates[mouseCoordinates.length-1][1]);
+    mouseCoordinates.splice(-2, 1);
     context.stroke();
   }
 }
@@ -61,7 +62,7 @@ function recordHistory(){
 
 function listenOnCanvasClearing(){
   $("#start-over").on("click", clearCanvas);
-  $("#remove-image").on("click", removeImage);
+  $("#remove-image").on("click", completeDrawing);
   $("#eraser").on("click", erasing);
   $("#js-undo").on("click", undo);
   $("#js-redo").on("click", redo);
@@ -77,7 +78,7 @@ function listenOnCanvasClearing(){
     }
   }
 
-  function removeImage(){
+  function completeDrawing(){
     if(confirm("Are you sure you're done?")){
       imageHolderContext.clearRect(0, 0, canvas.width, canvas.height);
       if($("#profile").hasClass("coloring")){
