--- a/app/assets/stylesheets/modals.css
+++ b/app/assets/stylesheets/modals.css
@@ -50,38 +50,58 @@ label.modal-label {
 }
 
 #profile-modal {
-  margin: auto;
-  width: 50% auto;
-  height: 60%;
-  background-color: yellow;
+  width: 45%;
+  min-width: 415px;
+  height: auto;
+  background-color: transparent;
 }
 
 #profile {
   margin-left: auto;
   margin-right: auto;
-}
-
-td.modal-text {
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
 
 img.example-profile {
   cursor: pointer;
   border: 1px solid;
-  margin-top: 40%;
-  width: 80%;
+  margin-top: 20%;
+  width: 48%;
   height: auto;
   opacity: .5;
+  border-radius: 25%;
 }
 
 img.example-profile:hover {
   opacity: 1;
-  width: 90%;
-  height: auto;
 }
 
-h3.profile-text {
+.profile-text {
   font-family: comic sans ms;
   text-align: center;
+  position: absolute;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top:-10%;
+  margin-left: 5%;
+}
+
+.right-image-text {
+  left: 50%;
+}
+
+.profile-thumb {
+  cursor: pointer;
+  border: 1px solid;
+  margin-top: 20%;
+  width: 75%;
+  display: inline-block;
+  height: auto;
+  opacity: .5;
+  border-radius: 25%;
+}
+
+.profile-thumb:hover {
+  opacity: 1;
 }
