--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -9,7 +9,7 @@
     <div class="search">
       <%= form_tag :controller => 'search', :action => 'create', :method => 'get' do %>
         <%= text_field_tag :keyword, params[:keyword], :id => 'search-field' %>
-        <%= submit_tag "Search! ", :content => nil %> 
+        <%= submit_tag "Search!" %> 
       <% end %> 
     </div>
   </div>
@@ -20,7 +20,7 @@
     <td>
       <div id="canvasDiv"></div>
       <!-- <div id="new-cartoon">
-        <%#= form_for(@cartoon) do |f| %>
+        <%#= form_for(@cartoon, html: { multipart: true }) do |f| %>
           <%#= f.text_field :name, placeholder: "Cartoon Name" %>
           <%#= f.file_field :avatar %>
           <%#= f.submit %>
@@ -28,16 +28,21 @@
       </div> -->
     </td>
 
-    <td >
+    <td>
       <div id="start-over"><strong>×</strong></div>
-      <!-- <div id="js-undo"></div> -->
-      <img id="js-undo" src="http://icons.iconarchive.com/icons/everaldo/kids-icons/128/undo-icon.png"/>
-      <img id="js-redo" src="http://icons.iconarchive.com/icons/everaldo/kids-icons/128/redo-icon.png"/>
+      <img id="js-undo" src="<%= asset_path('undo.png') %>"/>
+      <img id="js-redo" src="<%= asset_path('redo.png') %>"/>
+
       <div class="switch-holder">
-        <div class="light-switch"></div>
+        <div class="light-switch js-off"></div>
       </div>
+
+  <!--     <img id="coloring-profile" class="profile-thumb" src="<%#= asset_path('color.png') %>"/>
+      <img id="tracing-profile" class="profile-thumb" src="<%#= asset_path('trace.png') %>"> -->
+
+      <div id="profile-holder"></div>
       <div id="remove-image">Done</div>
-      <img id="save-drawing" src="http://icons.iconarchive.com/icons/everaldo/kids-icons/128/file-save-icon.png"/>
+      <img id="save-drawing" src="<%= asset_path('save.png') %>"/>
     </td>
 
     <td>
@@ -65,8 +70,7 @@
     <button id="close-modal">×</button>
 
     <label class="modal-label"><h2>Choose Your Favorite!</h2></label>
-    <div id="results-div">
-    </div>
+    <div id="results-div"></div>
   </div>
 </div>
 
@@ -80,23 +84,12 @@
 </div>
 
 <div class="modal-main" id="profile-modal">
-  <button id="close-modal">×</button>
-
-  <!-- <label class="modal-label"><h2>Choose Your Profile!</h2></label> -->
   <div id="profile">
-    <table>
-      <tr>
-        <td id="coloring" class="modal-text">
-          <img class="example-profile" src="<%= asset_path('color.png') %>">
-          <h3 class="profile-text">COLORING</h3>
-        </td>
-        <td></td>
-        <td id="tracing" class="modal-text">
-          <img class="example-profile"src="<%= asset_path('trace.png') %>" height="300px" width="300px">
-          <h3 class="profile-text">TRACING</h3>
-        </td>
-      </tr>
-    </table>
+    <img id="color" class="example-profile" src="<%= asset_path('color.png') %>"/>
+    <p class="profile-text left">COLORING</p>
+
+    <img id="trace" class="example-profile"src="<%= asset_path('trace.png') %>"/>
+    <p class="profile-text right-image-text">TRACING</p>
   </div>
 </div>
 
