addressed performance issue

--- a/app/assets/javascripts/drawings.js.erb
+++ b/app/assets/javascripts/drawings.js.erb
@@ -37,6 +37,7 @@ function listenOnMouse(){
     context.closePath();
     context.fillStyle = context.strokeStyle
     context.fill();
+    mouseCoordinates = new Array();
   }
 }
 
