--- a/app/assets/javascripts/selections.js.erb
+++ b/app/assets/javascripts/selections.js.erb
@@ -100,8 +100,8 @@ function listenOnSelections(){
   //   $("#profile").removeClass();
   //   $("#profile").addClass("selection".replace("profile", profile));
   //   $("#profile-modal").hide();
-  //   var adjustedHtml = "<img id='selection' class='profile-thumb' src='<%= asset_path('selection.png') %>'/>".replace(/selection/g, profile);
-  //   $("#profile-holder").html(adjustedHtml);
+  //   var adjustedHTML = "<img id='selection' class='profile-thumb' src='<%= asset_path('selection.png') %>'/>".replace(/selection/g, profile);
+  //   $("#profile-holder").html(adjustedHTML);
   // }
 
   function adjustImageOpacity(globalAlpha){
