--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -33,16 +33,13 @@
       <img id="js-undo" src="<%= asset_path('undo.png') %>"/>
       <img id="js-redo" src="<%= asset_path('redo.png') %>"/>
 
-      <div class="switch-holder">
-        <div class="light-switch js-off"></div>
-      </div>
-
-  <!--     <img id="coloring-profile" class="profile-thumb" src="<%#= asset_path('color.png') %>"/>
-      <img id="tracing-profile" class="profile-thumb" src="<%#= asset_path('trace.png') %>"> -->
-
+      
       <div id="profile-holder"></div>
-      <div id="remove-image">Done</div>
-      <img id="save-drawing" src="<%= asset_path('save.png') %>"/>
+
+      <div id="switch-div"></div>
+      <div id="done-div"></div>
+
+      <!-- <img id="save-drawing" src="<%#= asset_path('save.png') %>"/> -->
     </td>
 
     <td>
