--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -15,6 +15,18 @@
   </div>
 </div>
 
+<div class="modal-background">
+  <div class="modal-main" id="profile-modal">
+    <div id="profile">
+      <img id="color" class="example-profile" src="<%= asset_path('color.png') %>"/>
+      <p class="profile-text left">COLORING</p>
+
+      <img id="trace" class="example-profile"src="<%= asset_path('trace.png') %>"/>
+      <p class="profile-text right-image-text">TRACING</p>
+    </div>
+  </div>
+</div>
+
 <table>
   <tr>
     <td>
@@ -77,16 +89,6 @@
 
     <label class="modal-label"><h2>About</h2></label>
     <h4 class="modal-text">iDraw allows you to draw your favorite cartoon character by tracing over it.</h4>
-  </div>
-</div>
-
-<div class="modal-main" id="profile-modal">
-  <div id="profile">
-    <img id="color" class="example-profile" src="<%= asset_path('color.png') %>"/>
-    <p class="profile-text left">COLORING</p>
-
-    <img id="trace" class="example-profile"src="<%= asset_path('trace.png') %>"/>
-    <p class="profile-text right-image-text">TRACING</p>
   </div>
 </div>
 
