--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,7 +1,7 @@
 <div id="header-div">
   <div class="left">
     <div id="about">
-      <h2>iDraw</h2>
+      <h2><a href="/">iDraw</a></h2>
     </div>
   </div>
  
@@ -83,14 +83,17 @@
   </div>
 </div>
 
-<div class="modal-base" id="about-modal-base">
+<!-- <div class="modal-base" id="about-modal-base">
   <div class="modal-main" id="about-modal-main">
     <button id="close-modal">×</button>
 
     <label class="modal-label"><h2>About</h2></label>
-    <h4 class="modal-text">iDraw allows you to draw your favorite cartoon character by tracing over it.</h4>
+    <h4 class="modal-text">iDraw allows you to draw your favorite cartoon character by tracing over it.
+
+    It's super simple! After you choose your profile (coloring/tracing), choose a cartoon character from the list, and color away.
+    </h4>
   </div>
-</div>
+</div> -->
 
 <div id="footer">
   <div class="center">
