--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -83,6 +83,13 @@
   </div>
 </div>
 
+<audio class="audios" id="color-audio">
+  <source src="audios/color.m4a" type="audio/mpeg">
+</audio>
+<audio class="audios" id="trace-audio">
+  <source src="audios/trace.m4a" type="audio/mpeg">
+</audio>
+
 <!-- <div class="modal-base" id="about-modal-base">
   <div class="modal-main" id="about-modal-main">
     <button id="close-modal">×</button>
