--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -4,7 +4,7 @@
       <h2><a href="/">iDraw</a></h2>
     </div>
   </div>
- 
+ <!-- BEGIN SEARCH FORM -->
   <div class="right">
     <div class="search">
       <%= form_tag :controller => 'search', :action => 'create', :method => 'get' do %>
@@ -14,7 +14,9 @@
     </div>
   </div>
 </div>
+<!-- END SEARCH FORM -->
 
+<!-- BEGIN PROFILE MODAL -- ACTIVE ON DOCUMENT-READY -->
 <div class="modal-background">
   <div class="modal-main" id="profile-modal">
     <div id="profile">
@@ -26,6 +28,7 @@
     </div>
   </div>
 </div>
+<!-- END PROFILE MODAL -->
 
 <table>
   <tr>
@@ -42,8 +45,8 @@
 
     <td>
       <div id="start-over"><strong>×</strong></div>
-      <img id="js-undo" src="<%= asset_path('undo.png') %>"/>
-      <img id="js-redo" src="<%= asset_path('redo.png') %>"/>
+      <img id="js-undo" src="<%= asset_path('undo.png') %>"/><br>
+      <img id="js-redo" src="<%= asset_path('redo.png') %>"/><br>
 
       
       <div id="profile-holder"></div>
@@ -56,7 +59,6 @@
 
     <td>
       <div id="cartoons-header"><h4>Choose Your Favorite</h4></div>
-      <span id="new-upload"></span>
       <div id="all-cartoons">
         <% @cartoons.each do |cartoon| %>
           <div>
@@ -67,13 +69,16 @@
     </td>
 
     <td>
+    <!-- BEGIN HTML5 COLOR PICKER -->
       <div id="html5DIV">
         <input type="color" id="html5colorpicker" class="form-control" value="#ff0000">
       </div>
+    <!-- END HTML5 COLOR PICKER -->
     </td>
   </tr>
 </table>
 
+<!-- BEGIN SEARCH MODAL -->
 <div class="modal-base" id="search-modal-base">
   <div class="modal-main" id="search-modal-main">
     <button id="close-modal">×</button>
@@ -82,13 +87,16 @@
     <div id="results-div"></div>
   </div>
 </div>
+<!-- END SEARCH MODAL -->
 
+<!-- BEGIN AUDIO TAGS -->
 <audio class="audios" id="color-audio">
   <source src="audios/color.m4a" type="audio/mpeg">
 </audio>
 <audio class="audios" id="trace-audio">
   <source src="audios/trace.m4a" type="audio/mpeg">
 </audio>
+<!-- END AUDIO TAGS -->
 
 <!-- <div class="modal-base" id="about-modal-base">
   <div class="modal-main" id="about-modal-main">
